rename to matic and maha

--- a/frontend/client/templates/head.html
+++ b/frontend/client/templates/head.html
@@ -1,5 +1,5 @@
 <head>
-  <title>CryptoControl DEX</title>
+  <title>MahaDAO DEX</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107704992-12"></script>
