--- a/frontend/client/style/style.scss
+++ b/frontend/client/style/style.scss
@@ -1808,7 +1808,7 @@ button.dex-btn-default.sell, button.dex-btn-max.sell {
   }
 
   .div-clients {
-    height: 360px;
+    // height: 360px;
     display: flex;
     justify-content: center;
     font-size: 21px;
@@ -1820,8 +1820,9 @@ button.dex-btn-default.sell, button.dex-btn-max.sell {
   .div-metamask,
   .div-mist {
     background-color: #FFFFFF;
-    width: 340px;
-    height: 360px;
+    max-width: 500px;
+    width: 100%;
+    // height: 360px;
     padding: 33px 10px 33px 27px;
     opacity: 0.89;
     border: 2px solid #EFF1F3;
